# sanguosha_v1.0

./: CMakeLists.txt  README.md  debugging.sh
cmake/: linux_a7_tool_chain.cmake
doc/: cardInfo.txt  三国杀游戏牌统计.txt
src/: CMakeLists.txt  card_info.cpp  card_info.h  main.cpp  player.cpp  player.h
src/card/: card_info.cpp  card_info.h
src/hero/: CMakeLists.txt  soldier.cpp  soldier.h
src/player/: player.cpp  player.h
src/process_control/: ProcessControl.cpp  ProcessControl.h
src/rule/: CMakeLists.txt  identity_rule.cpp  identity_rule.h
test/LLT/llt_src/: main.cpp  test_main.cpp
test/LLT/llt_src/src/: main.cpp
